scroll and z-index fix for dialog panels

--- a/layout/header/header.module.scss
+++ b/layout/header/header.module.scss
@@ -1,4 +1,5 @@
 @import "css/settings";
+@import "css/settings/zIndex";
 @import "css/settings/breakpoints";
 
 // For the best effect this value should be higher then the transition duration
@@ -17,7 +18,7 @@ $c-mega-menu-wrapper-transition-duration-ms: 800;
   right: 0;
   left: 0;
   background-color: transparent;
-  z-index: 1000;
+  z-index: $z-index-header;
   transition: background-color #{$c-mega-menu-wrapper-transition-duration-ms}ms ease-in-out;
 
   &--max-height-override #{$this}__bg {
